修改监控进程 增加配置文件 优化代码

--- a/Base/Makefile
+++ b/Base/Makefile
@@ -1,26 +1,23 @@
 VERSION=v1.0
-LIBDIR=/lib
+LIBDIR=../libs
 CC = g++
 
-CPPFLAGS := -g -Wall -fPIC -Wno-error=overflow -std=c++11
+CPPFLAGS := -g -Wall -fPIC -Wno-error=overflow -Wno-deprecated -std=c++11
 CFLAGS  := -Wall -std=c++11 -g
 
-SHARE := -shared
+OPEN_LIB = -lpthread -lcurl -lglog
 
-OPEN_LIB = -lpthread  -lcurl
+OBJS :=common.o  LibcurClient.o CommonList.o MessageQueue.o ConfigFileReader.o
+TATIC_NAME = libbase.a
 
-OBJS =common.o  LibcurClient.o CommonList.o MessageQueue.o 
-LIB = libbase.so 
-
-all : $(LIB)
-
-install: $(LIB)
-	cp $(LIB) $(LIBDIR)
+all : $(TATIC_NAME)
 
 FORCE:
-$(LIB) : $(OBJS)
-
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(SHARE) -o $@ $(OBJS) $(OPEN_LIB)
+all:$(OBJS)
+$(TATIC_NAME):$(OBJS)
+	ar -cr $(TATIC_NAME) $^
+$(OBJS):
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $^ $(OPEN_LIB)
 
 clean:
 	rm -f $(OBJS) $(LIB)
@@ -29,5 +26,4 @@ common.o:common.cpp common.h
 LibcurClient.o: LibcurClient.cpp LibcurClient.h
 CommonList.o: CommonList.cpp  CommonList.h
 MessageQueue.o: MessageQueue.c MessageQueue.h
-
-
+ConfigFileReader.o: ConfigFileReader.cpp ConfigFileReader.h
