--- a/server.conf
+++ b/server.conf
@@ -17,4 +17,8 @@ HttpAPIStr=http://192.168.1.205:8080/live/main?ClientID=1001
 Logfolder=./log/
 
 #录制服务名字
-ServerName=LIVE录像01
+ServerName=LIVE录像
+
+#注册录制服务API
+ServerNameAPI=?serverName=
+ServerCreateAPI=&serverType=LiveRecord&serverApi=http://192.168.1.206:
