重新整理缓冲区，增加异常处理

--- a/server.conf
+++ b/server.conf
@@ -22,3 +22,6 @@ ServerName=LIVE录像
 #注册录制服务API
 ServerNameAPI=?serverName=
 ServerCreateAPI=&serverType=LiveRecord&serverApi=http://192.168.1.206:
+
+#aacTag 计数器
+AacTagCount=200
